# topicmod

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  emacs_shortcuts.txt  setup.py
anya_artm/: Trainer.docx  anya_artm.vcxproj.filters  gs-strictParts.cpp  gs.cpp  outputs.cpp  perplexity.cpp  stdafx.cpp  stdafx.h  types.cpp
cmake_modules/: FindGlog.cmake  FindGtest.cmake  FindProtobufPlugin.cmake
collateral/: Large-scale_topic_modeling.docx  artm_dev.tex  artm_dev_rus.tex  competitors.txt  diagramm_BigARTM.eps  diagramm_BigARTM.vsdx  diagramm_artm_core.eps  diagramm_artm_core.vsdx  diagramm_artm_network.eps  diagramm_artm_network.vsdx  diagramm_workflow.eps  diagramm_workflow.vsdx  how-to-cmake.txt  how-to-proto.txt  icpc.help.txt
datasets/: copy_from_server.sh
deploy/: deploy.sh  l_ccompxe_online_2013_sp1.1.106.config.ini  l_ccompxe_online_2013_sp1.1.106.sh  minimal.sh  storage_server.sh
deps_study/: Makefile  foo.h  x.cc  x.h
docs/: contents.txt  devguide.txt  faq.txt  glossary.txt  index.txt  intro.txt  tutorial.txt
icpp08/: Makefile  README.txt  icpp08.sln  init.sh  run.sh
libs/: README.txt  libboost_chrono-vc100-mt-1_55.lib  libboost_chrono-vc100-mt-gd-1_55.lib  libboost_chrono-vc110-mt-1_55.lib  (+12 more)
src/: CMakeLists.txt  Makefile  README.TXT  artm.targets  artm_vs2010.sln  artm_vs2012.sln  topicmd.sln  topicmd_VS2010.sln  topicmd_VS2012.sln
src/Win32/Debug/: artm_dll.exp  artm_dll.lib
src/artm/: CMakeLists.txt  Makefile  Messages.java  artm.vcxproj  artm_dll.vcxproj  artm_tests.vcxproj  batch_manager.cc  batch_manager.h  boost_thread_test.cc  c_interface.cc  c_interface.h  call_on_destruction.h  common.h  cpp_interface.cc  cpp_interface.h  cpp_interface_unittest.cc  data_loader.cc  data_loader.h  dirichlet_regularizer_phi.cc  dirichlet_regularizer_phi.h  dirichlet_regularizer_theta.cc  dirichlet_regularizer_theta.h  dll_main.cpp  exceptions.h  generation.cc  generation.h  helpers.cc  helpers.h  instance.cc  instance.h  instance_manager_test.cc  instance_schema.cc  instance_schema.h  instance_test.cc  internals.pb.cc  internals.pb.h  internals.proto  internals.rpcz.cc  internals.rpcz.h  internals_pb2.py  (+46 more)
src/artm/core/: batch_manager.cc  batch_manager.h  collection_parser.cc  collection_parser.h  common.h  data_loader.cc  data_loader.h  dictionary.h  exceptions.h  generation.cc  generation.h  helpers.cc  helpers.h  instance.cc  instance.h  instance_schema.cc  instance_schema.h  internals.pb.cc  internals.pb.h  internals.proto  internals.rpcz.cc  internals.rpcz.h  master_component.cc  master_component.h  master_component_service_impl.cc  master_component_service_impl.h  master_interface.h  master_proxy.cc  master_proxy.h  merger.cc  merger.h  node_controller.cc  node_controller.h  node_controller_service_impl.cc  node_controller_service_impl.h  processor.cc  processor.h  protobuf_helpers.h  regularizable.h  template_manager.h  (+4 more)
src/artm/proto/: internals.proto
src/artm/regularizer/: README.txt
src/artm/regularizer_sandbox/: decorrelator_phi.cc  decorrelator_phi.h  dirichlet_phi.cc  dirichlet_phi.h  dirichlet_theta.cc  dirichlet_theta.h  multilanguage_phi.cc  multilanguage_phi.h  smooth_sparse_phi.cc  smooth_sparse_phi.h  smooth_sparse_theta.cc  smooth_sparse_theta.h
src/artm/regularizers_sandbox/: dirichlet_phi.cc  dirichlet_phi.h  dirichlet_theta.cc  dirichlet_theta.h  smooth_sparse_phi.cc  smooth_sparse_phi.h  smooth_sparse_theta.cc  smooth_sparse_theta.h
src/artm/score_sandbox/: items_processed.cc  items_processed.h  perplexity.cc  perplexity.h  sparsity_phi.cc  sparsity_phi.h  sparsity_theta.cc  sparsity_theta.h  theta_snippet.cc  theta_snippet.h  top_tokens.cc  top_tokens.h  topic_kernel.cc
src/artm_cpp/: cpp_interface.h
src/artm_tests/: CMakeLists.txt  collection_parser_test.cc  cpp_interface_test.cc  instance_manager_test.cc  instance_test.cc  nodes_connectivity_test.cc  rpcz_canary_service.pb.cc  rpcz_canary_service.pb.h  rpcz_canary_service.rpcz.cc  rpcz_canary_service.rpcz.h  rpcz_canary_test.cc  template_manager_test.cc  test_mother.cc  test_mother.h  thread_safe_holder_test.cc  topic_model_test.cc
src/cpp_client/: CMakeLists.txt  Makefile  c_client.vcxproj  cpp_client.vcxproj  doc_token_matrix.h  doc_topic_matrix.h  helpers.cc  helpers.h  srcmain.cc  token_topic_matrix.h
src/node_controller/: CMakeLists.txt  Makefile  node_controller.cc
src/python_client/: CMakeLists.txt  perplexity.txt  python_client.py  python_client.pyproj  smooth_sparse_experiment.py
src/python_interface/: messages_pb2.py  python_interface.py  python_interface.pyproj  tests.py
src/python_tests/: python_tests.pyproj  tests.py
src/rpcz/include/rpcz/: application.hpp  connection_manager.hpp  rpc.hpp  rpcz.pb.cc  rpcz.pb.h  server.hpp
src/rpcz/src/rpcz/: application.cc  clock.cc  connection_manager.cc  reactor.cc  rpc_channel_impl.cc  server.cc  zmq_utils.cc
src/rpcz/test/: rpcz_gtest_main.cc
src/rpcz/vsprojects/: rpcz.vcxproj  rpcz_plugin.vcxproj  rpcz_tests.vcxproj
src/targets/: Artm.CompilerAndLinker.props  Artm.CopyDependencies.props  Artm.DebugAndRelease.props  Artm.FolderStructure.props
src/topicmd/: Makefile  Messages.java  boost_thread_test.cc  c_interface.cc  c_interface.h  common.h  cpp_interface.cc  cpp_interface.h  cpp_interface_unittest.cc  data_loader.cc  data_loader.h  generation.h  instance.cc  instance.h  instance_manager.cc  instance_manager.h  instance_manager_test.cc  instance_schema.h  instance_test.cc  internals.pb.cc  internals.pb.h  internals.proto  merger.cc  merger.h  merger_test.cc  messages.pb.cc  messages.pb.h  messages.proto  messages_pb2.py  partition.cc  partition.h  partition_test.cc  processor.cc  processor.h  template_manager.h  thread_safe_holder.h  thread_safe_holder_test.cpp  token_topic_matrix.cc  token_topic_matrix.h  topicmd.vcxproj  (+3 more)
src/vsprojects/: artm.vcxproj  artm_tests.vcxproj  libartm.vcxproj  libartm.vcxproj.filters  node_controller.vcxproj  perplexity.txt  phi_sparsity.txt  python_client.pyproj  python_tests.pyproj  smooth_sparse_experiment.py  theta_sparsity.txt  top10.txt  top100.txt
(+102 files in other folders)
